# Strassen-algorithm-with-OpenMP-MPI

./: .gitignore  CMakeLists.txt  README.md  comparisor.cpp  comparisor_cuda.cpp  comparisor_openmp.cpp  naively_matrix_multiplication.cpp  naively_matrix_multiplication.h  strassen_algorithm_openMP.cpp  strassen_algorithm_openmp.cpp  strassen_algorithm_openmp.h  strassen_algorithm_openmp_cuda.cpp  strassen_algorithm_openmp_cuda.h  strassen_algorithm_sequential.cpp  strassen_algorithm_sequential.h
